[tool.poetry]
name = "test-poetry"
version = "0.1.0"
description = ""
authors = ["kidstonek <kidstonek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "3.1"
pillow = "8.3.2"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
